# pyfefi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml
include/: farray.hpp  maybe_omp.hpp  ndarray.hpp  pyfefi.hpp  rk.hpp  search_tree.hpp  simd.hpp  simd_old.hpp  utils.hpp  vec_alg.hpp
include/interp/: interp.hpp  interp_bwd.hpp  interp_fwd.hpp  interp_poly.hpp  utils.hpp
include/tuple_algebra/: tuple_algebra.hpp  tuple_math.hpp
pyfefi/: __init__.py  data.py  interp.py
pyfefi/coords/: __init__.py  cartesian.py  cartesian_mod.py  coord.py  coord_list.py  sphere_mod.py
src/: CMakeLists.txt  lic.cpp  lic1.cpp  temperature_rotate.cpp  trace_grid.hpp  trace_line.cpp
src/coords/: CMakeLists.txt  cartesian_mod_core.cpp  mesh_core.cpp  sphere_mod_core.cpp
src/interp/: interp.cpp
tests/: test_line_tracer.py
utils/: mdinterp.py
