[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.10.4",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfefi"
version = "0.0.1"
description = "Python post processor for fefi code"
authors = [
    {name = "Junyi Ren", email = "j.y.ren9871@gmail.com" }
]
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'pandas',
    'netCDF4',
    'f90nml',
    'pybind11'
]
